Bug 1390445 - Fix select popup positioning for oop extensions options_ui pages. r=billm,kats,kmag

MozReview-Commit-ID: Izt10SuUK0i